Fix quick reply block text overflow

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12625,6 +12625,11 @@ input.required::placeholder {
   font-size: 12px;
   line-height: 17px;
   color: #aaaaaa;
+  display: inline-block;
+  max-width: 100%;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  text-align: center;
 }
 
 .attributeNotice {
